# android_opencv_test

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  calculator.cpp  make-gray-image.cpp  native-lib.cpp
android/app/src/main/kotlin/com/example/android_opencv_test/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/screen/: camera_screen.dart
test/: widget_test.dart
